# scraperapi-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
src/scraperapi_mcp_server/: __init__.py  __main__.py  config.py  model.py  server.py
src/scraperapi_mcp_server/scrape/: models.py  scrape.py
src/scraperapi_mcp_server/scraping/: basic_scrape.py  models.py  scrape.py  smart_scrape.py
src/scraperapi_mcp_server/sdes/: amazon.py  base.py  models.py
src/scraperapi_mcp_server/utils/: __init__.py  country_codes.py  domain_based_suggestions.py  exceptions.py  image_detection.py  make_request.py  prompts.py  rate_limiter.py  templates.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_config.py  test_models.py  test_rate_limiter.py  test_scrape.py  test_server.py
